# abridged

./: pyproject.toml
src/: ab.py  app.py  file_io.py  index.html  summarize.py
