[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abridged"
version = "0.1.0"  
description = "Summarize texts without generative AI."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Richard Dow", email = "trippdow@gmail.com" }]
keywords = ["NLP", "GOFAI", "summarization"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
  "numpy>=1.23",
  "tqdm>=4.65",
  "scipy==1.17.0",
  "scikit-learn==1.8.0",
  "nltk==3.9.2",
  "pymupdf==1.26.7",
  "uvicorn",
  "python-multipart",
  "fastapi==0.128.0",
]

[project.urls]
Homepage = "https://github.com/prettytrippy/abridged"
Issues = "https://github.com/prettytrippy/abridged/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
